<resources>
    <string name="app_name">Jesuitas Rioja</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_bienvenido">Bienvenido</string>
    <string name="menu_oferta">Oferta Educativa</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_enlaces">Enlaces</string>
    <string name="Integral">Formación Integral</string>
    <string name="Profesional">Formación Profesional</string>
    <string name="CosasIntegral">Educación Infantil\nEducación Primaria\nEducación Secundaria\nBachillerato</string>
    <string name="CosasProfesional">Formación Profesional Básica\nCiclos Grado Medio\nCiclo Grado Superior</string>
    <string name="correo">csc@jesuitasrioja.org</string>
    <string name="telefono">941221700</string>
    <string name="direccion">Duques de Nájera,19 26002 Logroño</string>
    <string name="racima">Racima La Rioja</string>
    <string name="moodle">Moodle La Rioja</string>
    <string name="webjesuitas">Web Jesuitas Rioja</string>
    <string name="enlaceracima">https://ias1.larioja.org/eduCas/login?service=https%3A%2F%2Fracima.larioja.org%2Fracima%2FidentificacionCAS.jsp</string>
    <string name="enlacemoodle">https://aulavirtual-educacion.larioja.org/</string>
    <string name="enlacejesuitas">https://www.jesuitasrioja.org/</string>

</resources>