<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_bienvenido" />
        <item
            android:id="@+id/nav_oferta"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/menu_oferta" />
        <item
            android:id="@+id/nav_contacto"
            android:icon="@drawable/ic_baseline_perm_contact_calendar_24"
            android:title="@string/menu_contacto" />
        <item
            android:id="@+id/nav_enlaces"
            android:icon="@drawable/ic_baseline_link_24"
            android:title="@string/menu_enlaces" />
    </group>
</menu>