<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.jesuitasrioja4.ui.home.HomeFragment"
        android:label="@string/menu_bienvenido"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_oferta"
        android:name="com.example.jesuitasrioja4.ui.ofertaeducativa.OfertaFragment"
        android:label="@string/menu_oferta"
        tools:layout="@layout/fragment_oferta" />

    <fragment
        android:id="@+id/nav_contacto"
        android:name="com.example.jesuitasrioja4.ui.contacto.ContactoFragment"
        android:label="@string/menu_contacto"
        tools:layout="@layout/fragment_contacto" />

    <fragment
        android:id="@+id/nav_enlaces"
        android:name="com.example.jesuitasrioja4.ui.enlaces.EnlaceFragment"
        android:label="@string/menu_enlaces"
        tools:layout="@layout/fragment_enlace" />
</navigation>