<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.contacto.ContactoFragment">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="149dp"
        android:layout_height="42dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:text="@string/direccion"
        app:layout_constraintStart_toEndOf="@+id/iconomapa"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="171dp"
        android:layout_height="23dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="120dp"
        android:text="@string/correo"
        app:layout_constraintStart_toEndOf="@+id/iconoCorreo"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iconotelefono"
        android:layout_width="32dp"
        android:layout_height="28dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/ic_baseline_local_phone_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconoCorreo" />

    <ImageView
        android:id="@+id/iconoCorreo"
        android:layout_width="32dp"
        android:layout_height="25dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="116dp"
        android:src="@drawable/ic_baseline_mail_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:text="@string/telefono"
        app:layout_constraintStart_toEndOf="@+id/iconotelefono"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/iconomapa"
        android:layout_width="35dp"
        android:layout_height="32dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_baseline_map_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconotelefono" />
</androidx.constraintlayout.widget.ConstraintLayout>